# LimAuto

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.frontend-dev  LICENSE  README.md  SETUP.md  auto_graph_generator.py  check  docker-compose.dev.yml  docker-compose.yml  docker-start.sh  integration_example.py  nginx.conf  performance_optimizations.py  pytest.ini  requirements.txt  run_combined.py  setup.cfg  setup.py  start_backend.py  start_dev.py  start_frontend.py  ui_integration_demo.py  world_class_integration.py
BookLLM/: config.yaml  pyproject.toml
BookLLM/src/: api.py  api_enhanced.py  logging_config.py  main.py
BookLLM/src/agents/: base.py  enhanced_agents.py
BookLLM/src/core/: __init__.py  base.py  graph.py  orchestrator.py  types.py  workflow.py
BookLLM/src/interfaces/: __init__.py  llm.py  openai_interface.py
BookLLM/src/knowledge/: domain_expert.py  intelligent_knowledge_system.py
BookLLM/src/models/: __init__.py  agent_type.py  config.py  state.py
BookLLM/src/monitoring/: __init__.py  monitoring_agent.py  start_tracker.py
BookLLM/src/quality/: __init__.py  advanced_quality.py  control.py  metrics.py  placeholder.py  sanity.py
BookLLM/src/services/: __init__.py  export.py  ollama.py
BookLLM/src/ui/: orchestrator_integration.py  realtime_integration.py
BookLLM/tests/: test_book_title_agent.py  test_chapter_post_process.py  test_export_service.py  test_orchestrator.py  test_outline_agent.py  test_resume.py  test_sanity.py  test_style_guide.py  test_toc_agent.py
(+119 files in other folders)
