[tool.poetry]
name = "bookllm"
version = "0.1.0"
description = "AI-powered book writing system using LangGraph"
authors = ["OpenAI <openai@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
langgraph = "^0.0.11"
pydantic = "^2.0.0"
tiktoken = "^0.5.1"
PyYAML = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"